[package]
name = "lcov-summary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive"] }
colored = "2.0.0"
nom = "7.1.3"
prettytable-rs = "0.10.0"
rustc-demangle = "0.1.23"
